tests/NormalTests/paczka1/fuzzy1/79184911.err
Error in line 4: Rc5M5s S846 13,45
Error in line 2: A532 S846 67,4
Error in line 10: c8oFZyX S43 92,9
Error in line 5: Rc5M5s S43 55,8
Error in line 15: Rc5M5s A532 54,0
Error in line 29: Rc5M5s S846 5,0
Error in line 32: KFMNhbOUrB S846 77,4
Error in line 30: Rc5M5s A532 82,6
Error in line 35: c8oFZyX S43 97,8
Error in line 37: Rc5M5s S43 20,0
Error in line 7: A532 S43 48,5
